[gd_scene load_steps=11 format=2]

[ext_resource path="res://Characters/Enemies/Slime.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/Slime_Forest_Idle.png" type="Texture" id=2]
[ext_resource path="res://Objects/Hitboxes.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 4 )

[sub_resource type="CircleShape2D" id=2]
radius = 48.0

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10.4687, 5.92182 )

[node name="Slime" type="KinematicBody2D" groups=[
"hurtable",
]]
position = Vector2( 1.52588e-05, -3.70811 )
collision_layer = 20
collision_mask = 17
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 0, 3.70811 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 2
playing = true

[node name="jump_timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Hitbox" parent="." groups=[
"hurtable",
] instance=ExtResource( 3 )]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 3.70812 )
shape = SubResource( 7 )

[node name="Position2D" type="Position2D" parent="."]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="timeout" from="jump_timer" to="." method="_on_Timer_timeout"]
